--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,8 @@
     "no-shadow": "off",
     "no-restricted-imports": ["error", { "paths": ["@poslive/lib/components"] }],
     "simple-import-sort/imports": "error",
-    "function-paren-newline": "off"
+    "function-paren-newline": "off",
+    "no-await-in-loop": "off",
+    "no-plusplus": "off"
   }
 }
