--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
     "simple-import-sort/imports": "error",
     "function-paren-newline": "off",
     "no-await-in-loop": "off",
-    "no-plusplus": "off"
+    "no-plusplus": "off",
+    "no-param-reassign": "off"
   }
 }
